Fixed contact form labels being in the wrong position

--- a/css/styles.css
+++ b/css/styles.css
@@ -1030,7 +1030,7 @@ select:-webkit-autofill:focus {
 
 .formgroup label {
   position: absolute;
-  top: -6px;
+  top: -11px;
   left: 11px;
   padding-left: 5px;
   padding-right: 5px;
