--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -82,7 +82,7 @@
     position: relative;
     label {
         position: absolute;
-        top: -6px;
+        top: -11px;
         left: 11px;
         padding-left: 5px;
         padding-right: 5px;
